Parte 1/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: labnginx
spec:
  selector: 
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
