Parte 1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: labnginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nginxcompass.com
    http:
      paths:
      - path: /teste
        pathType: Prefix 
        backend:
          service:
            name: nginx-service
            port:
              number: 80
